# paw-diary

./: .envrc  .eslintignore  .eslintrc.md  .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc.json  CLAUDE.md  FRONTEND_ARCHITECTURE.md  README.md  README.zh-CN.md  TODOS.md  _typos.toml  activity-design.md  eslint.config.js  index.html  package.json  tailwind.config.js  vite.config.ts  vitest.config.ts
.claude/commands/: bug-fix.md  (+9 more)
.spec-workflow/: TODO.md
docs/: activity-pages.md  architecture.md  frontend-adapter-summary.md  frontend-integration-guide.md  product.md
scripts/: ios_device_app.sh  xcode-tauri.sh
specs/: 0001-prd.md  0002-activity-prd.md  0003-activity-pages-prd.md  0004-refactor-activity.brief.md  0005-weight-trend-chart.md  001-prd.md
src/: App.css  App.tsx  index.css  main.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: dev-http.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 20250827151006_create_pets_table.sql  20250901174026_create_activities_table.sql  20250906170000_create_activities_table.sql  20250907000000_add_activity_drafts.sql
src-tauri/src/: app_state.rs  commands.rs  database.rs  database_backup.rs  errors.rs  lib.rs  logger.rs  main.rs  photo.rs  protocol.rs
src-tauri/src/commands/: activities.rs  app.rs  mod.rs  pets.rs  photos.rs
src-tauri/src/database/: activities.rs  activity_data.rs  fts.rs  mod.rs  models.rs  pets.rs
src-tauri/src/errors/: README.md  activity.rs  common.rs  mod.rs  pet.rs
src-tauri/src/validation/: README.md  activity.rs  mod.rs  pet.rs
(+270 files in other folders)
